--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-		<title>! - Inaki Lanz Salom. Résumé. Senior Front-End Web Developer and UX Designer</title>
+		<title>Inaki Lanz Salom. Résumé. Senior Front-End Web Developer and UX Designer</title>
 
 		<meta name="Description" content="Iñaki Lanz Salom Senior Front-End Web Developer and UX Designer">
 		<meta name="Keywords" content="resume, resumé, front-end, UX, Madrid, Spain, HTML5, CSS3">
