change social icons

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
    						<a href="http://twitter.com/ochoak_/" title="Twitter" target="_blank"><img src="images/social_twitter.png" alt="Twitter" /></a>
    						<a href="http://www.facebook.es/ochoak" title="Facebook" target="_blank"><img src="images/social_facebook.png" alt="Facebook" /></a>
            	               <a href="http://delicious.com/inaki.lanz/" title="Delicious" target="_blank"><img src="images/social_delicious.png" alt="Delicious" /></a>        
+           	               <a href="https://github.com/ochoak" title="Git Hub" target="_blank"><img src="images/github_32.png" alt="Git Hub" /></a>      
 					</ul>					
 				</div>
 
