change word to world

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div class="imgBox">
 							<img class="oldie img-polaroid" src="images/oldie.png" title="I have no idea if this still working..." />
 						</div>
-						<p>I grew up among my father’s bunch of books on "BASIC”. I wrote mi first "Hello word" in an Amstrad CPC 464 and started copying codes from MICROMANIA magazines (I'm talking about the 90's!). Then, I started with C at high school and continued with C++ at college.  My beginnings as a developer were as a back-end, ASP and PHP. </p>
+						<p>I grew up among my father’s bunch of books on "BASIC”. I wrote mi first "Hello world" in an Amstrad CPC 464 and started copying codes from MICROMANIA magazines (I'm talking about the 90's!). Then, I started with C at high school and continued with C++ at college.  My beginnings as a developer were as a back-end, ASP and PHP. </p>
 				          <p>Step by step, I moved to the front-end side. I must confess, I was that kind of guy that used to make layouts using tables...   :-/</p>
 				          <p>Then I started to hear about UX, usability, accessibility, JavaScript, JavaScript frameworks, responsive design and mobile interfaces... and Google became my favorite teacher.</p>
 				          <p>I’ve tried to keep up with the newest web technologies. I'm always looking for new things to learn and try to be involved in all the events organized in my city by the front-end crew.</p>
