fixed some html errors

--- a/resume.html
+++ b/resume.html
@@ -33,9 +33,9 @@
 					<li><a href="#">Sandbox</a></li>
 				</ul>	
 			</nav>
-			<div id="device" class="desktop">Desktop</div>
-			<div id="device" class="tablet">Tablet</div>
-			<div id="device" class="mobile">&nbsp;</div>
+			<div class="device desktop">Desktop</div>
+			<div class="device tablet">Tablet</div>
+			<div class="device mobile">&nbsp;</div>
 		</div>
 		
 		<div id="wrapper" class="clearfix">	
