shadows, bg color and other stuff

--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
 							</ul>
 						</div>
 						<div class="blocks">
-							<h2>Download</h2>
+							<h2>Download CV</h2>
 							<ul class="resume">
 								<li><a href="./cv/inaki_joseba_lanz_salom_CV_(2012).pdf">Résumé spanish (full version)</a></li>
 								<li><a href="./cv/inaki_joseba_lanz_salom_CV_(2012)(eng).pdf">Résumé english (full version)</a></li>  
